--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,9 +1,14 @@
-V1.90 FINAL BETA
-
-Final changes which will make it into the release:
-
-- Support for animated (height)maps! (Use the new "Map Sequences"-window in the Prefs-section to define them
-  and to assign the sequence to a map channel)
+V1.90 RELEASE
+- Support for animated (height)maps! They are defined in the "Map Sequences"-window in the Prefs-section
+  and saved as local properties, i.e. you may use them independly of a specific set of fractal params.
+   - You define an image sequence by filename, start frame, end frame, loop setting and frame increment
+   - You assign this sequence to a logical map channel (any number) you wish
+   - You use this channel as map number in your fractal, e.g. as color map or heightmap
+   - Now you can preview the state at frame [n] by changing the frame number in the main view
+     (this is just for test render, not for animating)
+   - When you use this fractal in the animation window, the map will now be animated, i.e. at each frame
+     of the animation the corresponding frame of the map will be calculated (accordingly to the settings
+     you made) and the image-file will be loaded. If no image file is found it is asumed to be "black".
 
 - new MutaGen-module to easily explore new combinations of formulas and settings
    - four types of mutations:
@@ -17,90 +22,41 @@ Final changes which will make it into the release:
    - you may resize the window to alter the size of the generated thumbnail images
    - you may cancel/restart the mutation-process at any time (sometimes there occur combinations of parameters
      which may lead to "endless" calculations, in such cases it is helpful to be able to just restart)
-   - WARNING: some formula-combinations may crash the program, so save often!
+   - WARNING: some formula-combinations may SILENTLY crash the program, so please save often!
+     Silently crashing means you will not see it immediately, often the UI starts to behave weird.
+     We are working to improve this!
    - This is just the first version, e.g. interpolated functions are not supported yet!
-   - Please note that it is intented that this module does not create ready-to-use artworks from scratch.
+   - Please note, that it is intented that this module does not create ready-to-use artworks from scratch.
      It can only happen, when you put in well made parameters (whith everything what makes a great artwork),
      that the mutation will keep many of those properties, making it a nice artwork.
      Or in short: the better your input, the better the output.
 
-- Navigator-size may now be altered (you must expand the right toolbar to see the "Navigator size" control), 
-  the last setting is stored to the ini-file
+- Navigator-size may now be altered (you must expand the right toolbar to see the "Navigator size" control),
+  the last setting is stored to the ini-file. Please note, that the size can only be defined in percent
+  by using the arrows or listbox, but not by changing the window-size directly (this is due to some historic
+  implementation details).
 
-- Global rework of the UI, added theme-support, made "Glossy" the default theme
+- Global rework of the UI, added theme-support, made "Glossy" the default theme,
+  changed the captions of some buttons in order to make them more readable
 
 - Formula-Window:
     - exchanging of formulas now works in two directions
 
 - integrated formula-editor for creating/editing JIT-compiled formulas (see the new buttons in the formula window)
-   - support for MB3D's parameters and constants
+   - support for MB3D's parameters and constants, both the TIteration3D and TIteration3Dext-structs are supported
    - preprocessor to deal with the parameter-handling code
    - backed by the commercial PaxCompiler
    - included support for about 50 mathematical functions
    - watch out for formulas with the prefix "JIT" for examples!
+   - Please note that dIFS-formulas are not supported yet because they are invoked differently,
+     but also this will be fixed in future releases
 
 - Many new formulas from the community at fractalforums.com
 
-- New Info-Section at the main window, which now has a button to reach the official bug-reporting tool
+- New Info-Section at the main window, which now has a button to reach the official bug-reporting tool,
+  please use the bug-reporting-tool to report bugs if possible!
 
-################################################################################
-V1.90 BETA 10
-- flickering when resizing the JIT-formula-window removed
-- JIT-editor now supports to enter <tab>-characters
 
-V1.90 BETA 9
-- integrated editor for creating/editing JIT-compiled formulas (see the new buttons in the formula window)
-- new version for params (*.m3f) with named constants (which are used for JIT-compiled formulas)
-- JIT-formula-preprocessor which deals with the nasty param-handling
 
-V1.90 BETA 8
-- improved stability when loading maps from within Navigator and Animator in parallel
 
-V1.90 BETA 7
-- improved stability when loading maps, especially in the case of missing frames
-- new increment-option when defining animated maps (higher values than 1 will skip frames)
 
-V1.90 BETA 6
-- improved performance of loading animated maps
-
-V1.90 BETA 5
-- improved the refresh behaviour of the Navigator when changing the size
-- changed the captions of some buttons in order to make them more readable, especially when using Themes
-- new Info-Section at the main window, which now has a button to reach the official bug-reporting tool
-- changed the indicator symbols in the post-processing-window
-
-V1.90 BETA 4
-- Support for animated (height)maps! (Use the new "Map Sequences"-window in the Prefs-section to define them and to assign the sequence to a map channel)
-- Indicators (similar as before) to show active effects in the post-process-windows
-- Do not allow to send params from the MutaGen to the main editor while the main editor is rendering
-- Some minor UI-related changes
-
-V1.90 BETA 3
-- Global rework of the UI, added theme-support, made "Glossy" the default theme
-- many internal improvements of the MutaGen
-- Navigator-size may now be altered, the last setting is stored to the ini-file
-- Simplified the formula-window, removed the Nava-Refresh-option which was introduced with V1.90 BETA 1
-
-V1.90 BETA 2
-- MutaGen changes:
-   - added an internal probing mode, which generates a collection of mutations at each step and selects the msot "interesting" one, leading to much betters results
-   - avoiding certain problematic combinations of formulas (causing program crash or weird looking results)
-
-V1.90 BETA 1 
-- new MutaGen-module to easily explore new combinations of formulas and settings
-   - four types of mutation:
-       - add, remove, exchange formulas
-       - modify params of formulas
-       - modify Julia-mode
-       - modify iteration count
-   - in the UI you may turn on/off those types individually, by specifying a weight, and you may specify an additional strength-parameter
-   - you may browse through the already generated generations of mutations and restart on interesting results
-   - you may resize the window to alter the size (and render-speed) of the generated thumbnail images
-   - you may cancel/restart the mutation-process at any time (sometimes there occur combinations of parameters
-     which may lead to "endless" calculations, in such cases it is helpful to be able to just restart)
-
-- some enhancements of the Formula-window
-   - it is resizable now
-   - exchanging of formulas now works in two directions
-   - Number-Fields have now buttons to decrease/increase the value. The Increment can be specified at the bottom of the window
-   - Option to perform automatic refresh of the Navigator-window when changing formulas-parameters in the Formula-window
