--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,15 @@
+V1.96 (unreleased)
+ - finished the new Heightmap-Generator:
+    - generates heightmaps from arbitrary meshes
+    - OpenGL preview for realtime positioning of the mesh
+    - WaveFront OBJ format for loading of meshes is supported, only triangles and quadtrangles are imported
+      (so if your mesh contains polygons with more than 4 corners you must convert them to triangles first,
+      probably each 3D software will support this)
+    - Two types of maps are suzpported:
+        - 8 Bit PNG
+        - 16 Bit PGM (PGM because Delphi seems not able to generate 16 Bit PNG's)
+    - The map can be saved as image or directly saved as the next new slot to the maps folder
+
 V1.95 (unreleased)
  - OpenGL:
     - updated the OpenGL-functions to use the OpenGl 4.5 Headers from
